--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -2,6 +2,7 @@
 @model PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
+    TempData.Keep("username");
 }
 <h1>@ViewData["Title"]</h1>
 
