Bestellen functionaliteit toegevoegd, order word ook gesaved.

--- a/Pages/shoppingcart.cshtml
+++ b/Pages/shoppingcart.cshtml
@@ -36,7 +36,7 @@
                     </tr>
                 </tfoot>
             </table>
-            <form method="post" asp-page-handler="Order">
+            <form method="post">
                 <button type="submit" class="btn btn-success w-100 fw-bold" style="background-color: #00ff41; color: #1a1a1a; border-color: #00ff41; font-family: 'Courier New', Courier, monospace;">
                     Bestel
                 </button>
