--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/KE03_INTDEV_SE_1_Base.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <canvas class="matrix-rain"></canvas>
@@ -34,6 +35,9 @@
                             <a class="nav-link" asp-area="" asp-page="/productenoverzicht">Productenoverzicht</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/shoppingcart"><i class="fa fa-shopping-cart"></i></a>
+                        </li>
+                        <li class="nav-item ms-auto"></li>
                             <a class="nav-link" asp-area="" asp-page="/loguit">Log uit</a>
                         </li>
                     </ul>
