werkend zonder koppeltabel..

--- a/Pages/bestellinggeplaatst.cshtml
+++ b/Pages/bestellinggeplaatst.cshtml
@@ -6,4 +6,4 @@
 
 <h2>Bestelling Geplaatst</h2>
 <p>Uw bestelling is succesvol geplaatst. Bedankt voor uw aankoop!</p>
-<a asp-page="/Index" class="btn btn-primary">Terug naar Home</a>
+<a asp-page="/Index" class="btn btn-btn btn-success">Terug naar Home</a>
